<resources>
    <string name="Interstitial_ID">ca-app-pub-5168950479570531/3662771742</string>
    <string name="Banner_ID">ca-app-pub-5168950479570531/7083142001</string>
    <string name="app_name">Programing Codes</string>
    <string name="hello">Hello World!</string>
    <string name="textView">Output:</string>
    <string name="factorial">Enter an integer: 10</string>
    <string name="factorial2">Factorial of 10 = 3628800</string>
    <string name="print_number1">Enter a integer: 25</string>
    <string name="print_number2">You entered: 25</string>
    <string name="palindrom1">Enter an integer: 1001</string>
    <string name="palindrom2">1001 is a palindrome.</string>
    <string name="add_number1">Enter two integers: 12</string>
    <string name="add_number2">12 + 11 = 23</string>
    <string name="add_number3">11</string>
    <string name="mul_float3">Product = 8.0002</string>
    <string name="mul_float2">2.21</string>
    <string name="mul_float1">Enter two numbers: 3.62</string>
    <string name="prime_number1">Enter a positive integer: 5</string>
    <string name="prime_number2">5 is a prime number</string>
    <string name="swap_number4">After swapping, secondNumber = 3.20</string>
    <string name="swap_number3">After swapping, firstNumber = 4.05</string>
    <string name="swap_number2">Enter second number: 4.05</string>
    <string name="swap_number1">Enter first number: 3.20</string>
    <string name="power_number3">Answer = 8</string>
    <string name="power_number2">Enter an  exponent: 3</string>
    <string name="power_number1">Enter a base number: 2</string>
    <string name="prime_numbers3">Prime numbers between 10 and 20 are: 11 13 17 19</string>
    <string name="prime_numbers2">20</string>
    <string name="prime_numbers1">Enter two numbers(intervals): 10</string>
    <string name="even_odd1">Enter an integer: 5</string>
    <string name="even_odd2">5 is odd.</string>
    <string name="negative_positive1">Enter a number: -5</string>
    <string name="negative_positive2">You entered a negative number.</string>
    <string name="leap_year2">2016 is a leap year.</string>
    <string name="leap_year1">Enter a year: 2016</string>
    <string name="splash">Develpoed By MKB</string>
    <string name="title_activity_splash">splash</string>
    <string name="count_num2">Number of digits: 3</string>
    <string name="count_num1">Enter an integer: 125</string>
    <string name="large_num1">Enter three different numbers: 12</string>
    <string name="large_num2">25.05</string>
    <string name="large_numb3">25.06</string>
    <string name="large_num4">25.06 is the largest number.</string>
    <string name="rev_int2">Reversed Number: 21</string>
    <string name="rev_int1">Enter an integer: 12</string>
    <string name="string3">After concatenation: HelloWorld!</string>
    <string name="string2">Enter second string: World!</string>
    <string name="string1">Enter first string: Hello</string>
    <string name="chk_alpha1">Enter an character: D</string>
    <string name="chk_alpha2">D is an alphabet.</string>
    <string name="ascii_value2">ASCII value of A = 65</string>
    <string name="ascii_value1">Enter a character: A</string>
    <string name="cal_num1">Enter an operator(+,-,*,/): *</string>
    <string name="cal_num2">Enter two operand: 2</string>
    <string name="cal_num3">1.5</string>
    <string name="cal_num4">2.0 * 1.5 = 3.0</string>
    <string name="frq_char3">Frequency of l = 3</string>
    <string name="frq_char2">Enter a character from above string to find the frequency: l</string>
    <string name="sum_nat2">Sum = 15</string>
    <string name="size_var1">Size of int: 4 bytes</string>
    <string name="size_var2">Size of float: 4 bytes</string>
    <string name="size_var3">Size of double: 8 bytes</string>
    <string name="size_var4">Size of char: 1 byte</string>
    <string name="vowl_const2">c is a consonant.</string>
    <string name="vowl_const1">Enter an alphabet: c</string>
    <string name="binary_to_octal1">Enter a binary number: 0110</string>
    <string name="bianry_to_octal2">110 in binary = 6 in octal</string>
    <string name="binary_to_decimal2">101110 in binary = 46 in decimal</string>
    <string name="binary_to_decimal1">Enter a binary number: 0101110</string>
    <string name="decimal_to_octal1">Enter a decimal number: 459</string>
    <string name="alread_char1">A</string>
    <string name="alcalculator1">enter first number : 12</string>
    <string name="alcalculator2">enter the operator:   + - * /:*</string>
    <string name="alcalculator3">enter second number: 4</string>
    <string name="alcalculator4">result is: 48</string>
    <string name="alcalculator5">thank you for using the calculator! press any key</string>
    <string name="csgd1">Enter the Grade in UpperCase</string>
    <string name="csgd2">VERY GOOD</string>
    <string name="padd_num1">Enter first number: 1.5</string>
    <string name="padd_num2">Enter second number: 6.3</string>
    <string name="padd_num3">The sum of 1.5 and 6.3 is 7.8</string>
    <string name="pcosine1">Enter the value of x in degrees:75</string>
    <string name="pcosine2">Enter the number of terms:15</string>
    <string name="pcosine3">0.26</string>
    <string name="padd_matrix1">[17, 15, 4]</string>
    <string name="padd_matrix2">[10, 12, 9]</string>
    <string name="padd_matrix3">[11, 13, 18]</string>
    <string name="privacy_policy1">Privacy Policy</string>
    <string name="privacy_policy2">Programming Codes (\"us\", \"we\", or \"our\") operates the website and the Programming Codes mobile application (the \"Service\").  This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy for Programming Codes is managed through Free Privacy Policy.  We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</string>
    <string name="privacy_policy3">Information Collection And Use</string>
    <string name="privacy_policy4">We collect several different types of information for various purposes to provide and improve our Service to you.</string>
    <string name="privacy_policy5">Types of Data Collected</string>
    <string name="privacy_policy6">Personal Data</string>
    <string name="privacy_policy7">While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you (\"Personal Data\"). Personally identifiable information may include, but is not limited to:</string>
    <string name="privacy_policy8">* Cookies and Usage Data</string>
    <string name="privacy_policy9">Usage Data</string>
    <string name="privacy_policy10">We may also collect information that your browser sends whenever you visit our Service or when you access the Service by or through a mobile device (\"Usage Data\").</string>
    <string name="privacy_policy11">This Usage Data may include information such as your computer\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</string>
    <string name="privacy_policy12">When you access the Service by or through a mobile device, this Usage Data may include information such as the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data.</string>
    <string name="privacy_policy13"><![CDATA[Tracking & Cookies Data]]></string>
    <string name="privacy_policy14">We use cookies and similar tracking technologies to track the activity on our Service and hold certain information.  Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze our Service.</string>
    <string name="privacy_policy15">You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.</string>
    <string name="privacy_policy16">Examples of Cookies we use:</string>
    <string name="privacy_policy17">Session Cookies. We use Session Cookies to operate our Service.</string>
    <string name="privacy_policy18">Preference Cookies. We use Preference Cookies to remember your preferences and various settings.</string>
    <string name="privacy_policy19">Security Cookies. We use Security Cookies for security purposes.</string>
    <string name="privacy_policy20">Use of Data</string>
    <string name="privacy_policy21">Programming Codes uses the collected data for various purposes:</string>
    <string name="privacy_policy22">To provide and maintain the Service</string>
    <string name="privacy_policy23">To notify you about changes to our Service</string>
    <string name="privacy_policy24">To allow you to participate in interactive features of our Service when you choose to do so</string>
    <string name="privacy_policy125">To provide customer care and support</string>
    <string name="privacy_policy26">To provide analysis or valuable information so that we can improve the Service</string>
    <string name="privacy_policy27">To monitor the usage of the Service</string>
    <string name="privacy_policy28">To detect, prevent and address technical issues</string>
    <string name="privacy_policy29">Security Of Data</string>
    <string name="privacy_policy30">The security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</string>
    <string name="privacy_policy31">Analytics</string>
    <string name="privacy_policy32">We may use third-party Service Providers to monitor and analyze the use of our Service.</string>
    <string name="privacy_policy33">Google Analytics</string>
    <string name="privacy_policy34"><![CDATA[Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.  For more information on the privacy practices of Google, please visit the Google Privacy & Terms web page: https://policies.google.com/privacy?hl=en]]></string>
    <string name="privacy_policy35">Children\'s Privacy</string>
    <string name="privacy_policy36">Our Service does not address anyone under the age of 18 (\"Children\").</string>
    <string name="privacy_policy37">Changes To This Privacy Policy</string>
    <string name="privacy_policy38">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</string>
    <string name="privacy_policy39">Contact Us</string>
    <string name="privacy_policy40">If you have any questions about this Privacy Policy, please contact us:  By email: mkb.developers@gmail.com</string>
</resources>